--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   },
   "dependencies": {
     "body-parser": "*",
+    "dotenv": "^5.0.1",
     "ejs": "2.5.8",
     "eslint": "^4.19.1",
     "exif": "^0.6.0",
     "express": "*",
     "mongoose": "^5.0.12",
     "multer": "^1.3.0",
-    "sharp": "^0.20.1"
+    "passport": "^0.4.0",
+    "sharp": "^0.20.1",
+    "passport-local": "*"
   },
   "homepage": "https://github.com/saritakha/photoApp#readme",
   "devDependencies": {
