--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "eslint": "^4.19.1",
     "exif": "^0.6.0",
     "express": "*",
+    "moment": "^2.22.0",
     "mongoose": "^5.0.12",
     "multer": "^1.3.0",
     "passport": "^0.4.0",
-    "sharp": "^0.20.1",
-    "passport-local": "*"
+    "passport-local": "*",
+    "sharp": "^0.20.1"
   },
   "homepage": "https://github.com/saritakha/photoApp#readme",
   "devDependencies": {
