--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "body-parser": "*",
     "dotenv": "^5.0.1",
-    "ejs": "2.5.8",
+    "ejs": "^2.5.8",
     "eslint": "^4.19.1",
     "exif": "^0.6.0",
     "express": "*",
