--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "dependencies": {
     "body-parser": "*",
+    "cookies-parser": "^1.2.0",
     "dotenv": "^5.0.1",
     "ejs": "^2.5.8",
     "eslint": "^4.19.1",
     "exif": "^0.6.0",
     "express": "*",
+    "express-handlebars": "^3.0.0",
+    "handlebars-helpers": "^0.10.0",
     "moment": "^2.22.0",
     "mongoose": "^5.0.12",
     "multer": "^1.3.0",
