--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
     "url": "https://github.com/saritakha/photoApp/issues"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "*",
     "cookies-parser": "^1.2.0",
+    "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "ejs": "^2.5.8",
     "eslint": "^4.19.1",
     "exif": "^0.6.0",
     "express": "*",
-    "express-handlebars": "^3.0.0",
-    "handlebars-helpers": "^0.10.0",
+    "express-validator": "^5.1.2",
+    "helmet": "^3.12.0",
     "moment": "^2.22.0",
-    "mongoose": "^5.0.12",
+    "mongoose": "^5.0.14",
     "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-local": "*",
